[MODINVOICE-302] - improved errors